--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,13 @@
 remote_theme           : "just-the-docs/just-the-docs"
-repository             : "just-the-docs/just-the-docs"
+repository             : "sdpa-python/sdpa-python.github.io"
 title                  : "SDPA for Python"
 description            : "Python 3 Wrapper for SDPA (SemiDefinite Programming Algorithm)"
 color_scheme           : "celestite"
+
+plugins:
+  - jekyll-sitemap
+  - jekyll-include-cache
+
+whitelist:
+  - jekyll-sitemap
+  - jekyll-include-cache
