--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-remote_theme           : "just-the-docs/just-the-docs"
+remote_theme           : "just-the-docs/just-the-docs@v0.3.3"
 repository             : "sdpa-python/sdpa-python.github.io"
 title                  : "SDPA for Python"
 description            : "Python 3 Wrapper for SDPA (SemiDefinite Programming Algorithm)"
