--- a/_config.yml
+++ b/_config.yml
@@ -18,3 +18,9 @@ callouts:
 
   warning:
     color: red
+
+gh_edit_link: true
+gh_edit_link_text: "Edit this page on GitHub"
+gh_edit_repository: "https://github.com/sdpa-python/sdpa-python.github.io"
+gh_edit_branch: "main"
+gh_edit_view_mode: "tree"
